// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpert Component Snapshot test 1`] = `
<div>
  <h2>
     Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`GifExpert Component should  1`] = `
<div>
  <h2>
     Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</div>
`;
